# cc-fkb-tools-rs

./: .gitignore  Cargo.toml  cc-fkb-instr-loop.c  opcodes.md
ccfkb_compress/: Cargo.toml
ccfkb_compress/src/: main.rs
ccfkb_decode/: Cargo.toml
ccfkb_decode/src/: main.rs
ccfkb_encode/: Cargo.toml
ccfkb_encode/src/: main.rs
ccfkb_extract/: Cargo.toml
ccfkb_extract/src/: main.rs
ccfkb_lib/: Cargo.toml
ccfkb_lib/src/: bin_utils.rs  data.rs  lib.rs  logging.rs  madin.rs  util.rs
ccfkb_lib/src/data/: text_script.rs
ccfkb_lib/src/opcodes/: mod.rs
ccfkb_pack/: Cargo.toml
ccfkb_pack/src/: main.rs
ccfkb_transform/: Cargo.toml
ccfkb_transform/src/: main.rs
ccfkb_unpack/: Cargo.toml
ccfkb_unpack/src/: main.rs
ccfkb_untransform/: Cargo.toml
ccfkb_untransform/src/: main.rs
src/: data.rs  main.rs  util.rs
src/opcodes/: mod.rs
