[package]
name = "ccfkb_pack"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.35"
env_logger = "0.11.8"
once_cell = "1.21.3"
log = "0.4.22"
walkdir = "2.5.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde-json-fmt = "0.1.0"
serde_derive = "1.0.219"
rayon = "1.10.0"
clap = "4.5.40"
paste = "1.0.15"
serde_yml = "0.0.12"
