[package]
name = "ccfkb_lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "ccfkb_lib"

[dependencies]
walkdir = "2.5.0"
encoding_rs = "0.8.35"
once_cell = "1.21.3"
serde = "1.0.219"
serde_derive = "1.0.219"
nom = "8.0.0"
itertools = "0.14.0"
log = "0.4.28"
rayon = "1.10.0"
camino = "1.2.2"

# Binary dependencies
env_logger = "0.11.8"
serde_yml = "0.0.12"
png = "=0.18.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32", "Win32_System", "Win32_System_Console", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"], default-features = false }
