[package]
name = "ccfkb_lib"
version = "1.1.0"
edition = "2024"

[lib]
name = "ccfkb_lib"

[dependencies]
walkdir = "2.5.0"
encoding_rs = "0.8.35"
once_cell = "1.21.3"
serde = "1.0.219"
serde_derive = "1.0.219"
nom = "8.0.0"
itertools = "0.14.0"
log = { version = "0.4.28", features = ["std"] }
rayon = "1.10.0"
camino = "1.2.2"

# Binary dependencies
serde_yml = "0.0.12"
png = "=0.18.0"
